updated design changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-        <app-navbar></app-navbar>
+
+<!-- <app-navbar></app-navbar> -->
+<app-head-bar></app-head-bar>
         <!-- Masthead-->
         <banner></banner>
         <!-- About-->
