--- a/src/app/components/timeline/timeline.component.html
+++ b/src/app/components/timeline/timeline.component.html
@@ -1,8 +1,8 @@
 <div class="container-timeline container-padding" id="experience">
     <div class="col-md-12 mb-5">
         <div class="section-heading text-center">
-            <h2 class="text-center mt-0">My Resume</h2>
-            <hr class="divider my-4" />
+            <h2 class="text-center mt-0 text-blue fw-600">My Resume</h2>
+            <hr class="divider dark my-4" />
         </div>
     </div>
     <div class="row">
