--- a/src/app/components/contact-us/contact-us.component.html
+++ b/src/app/components/contact-us/contact-us.component.html
@@ -1,44 +1,50 @@
-<section class="page-section bg-dark text-white container-padding" *ngIf="data">
+<!-- <section class="page-section bg-dark text-white container-padding" *ngIf="data">
   <div class="container resume-container">
-    <div class="col-12 mb-4 col-lg-6 resume-title" >{{data.titleResume}}</div>
-    <div class="col-12 mb-4  col-lg-6 row justify-content-end download-button"> <a
+    <div class="col-12 mb-0 col-lg-6 resume-title" >{{data.titleResume}}</div>
+    <div class="col-12 mb-0  col-lg-6 row justify-content-end download-button"> <a
       class="btn btn-light btn-xl btn-one"
       href={{data.link}}
       download={{data.emailName}}
     > 
      {{data.buttonText}}
     </a></div>
-    <!-- <h2 class=""></h2>  -->
+    <h2 class=""></h2>  
    
   </div>
-</section>
+</section> -->
 <section class="page-section container-padding" id="contact">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-lg-8 text-center">
         <h2 class="mt-0">{{data.title}}</h2>
         <hr class="divider my-4" />
-        <p class="text-muted mb-5">
+        <!-- <p class="text-muted text-white mb-2">
           {{data.subTitle}}
-        </p>
+        </p> -->
       </div>
     </div>
 
-    <div class="row">
-      <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
-        <i class="fa fa-phone fa-3x mb-3 text-muted"></i>
+    <div class="row footer-social">
+      <div class="col-xs-12 col-lg-3 ml-auto text-center mb-0 mb-lg-0 footer-social-links">
+        <a href={{data.link}} download={{data.emailName}}>
+          <i class="fa fa-cloud-download fa-2x mb-2 text-white ball"></i>
+          <div class="d-block clrPhone">My Resume</div>
+        </a>
+      </div>
+      <div class="col-xs-12 col-lg-3 ml-auto text-center mb-0 mb-lg-0 footer-social-links">
+        <i class="fa fa-phone fa-2x mb-2 text-white"></i>
         <div class="d-block clrPhone">{{data.number}}</div>
       </div>
-      <div class="col-lg-4 mr-auto text-center mb-5">
-        <i class="fa fa-envelope fa-3x mb-3 text-muted"></i>
-        <a class="d-block" href="mailto:saikiranduddukuri03@gmail.com"
-          >{{data.email}}</a
-        >
-      </div>
-      <div class="col-lg-4 mr-auto text-center">
-        <i class="fa fa-linkedin-square fa-3x mb-3 text-muted"></i>
+      <div class="col-xs-12 col-lg-3 mr-auto text-center mb-0 footer-social-links">
+        <i class="fa fa-linkedin-square fa-2x mb-2 text-white"></i>
         <a class="d-block " target="_blank" href="https://www.linkedin.com/in/saikiran-duddukuri-a68bb8282/"
           >Connect me </a
+        >
+      </div>
+      <div class="col-xs-12 col-lg-3 mr-auto text-center mb-0 footer-social-links">
+        <i class="fa fa-envelope fa-2x mb-2 text-white"></i>
+        <a class="d-block" href="mailto:saikiranduddukuri03@gmail.com"
+          >{{data.email}}</a
         >
       </div>
     </div>
