--- a/src/app/components/services/services.component.html
+++ b/src/app/components/services/services.component.html
@@ -1,10 +1,10 @@
 <section class="page-section container-padding" id="skills" *ngIf="data">
   <div class="">
-    <h2 class="text-center mt-0">My Stack</h2>
-    <hr class="divider my-4" />
+    <h2 class="text-center mt-0 text-blue fw-600">My Stack</h2>
+    <hr class="divider dark my-4" />
     <div class="row justify-align">
       <ng-container  *ngFor="let lang of data">
-        <div class="{{getClass()}} text-center stack-box">
+        <div class="col-md-1 col-4 text-center stack-box">
           <img class="rounded-circle shadow-1-strong mb-4"
           src={{lang.image}} alt={{lang.name}}/>
           <ul class="list-unstyled d-flex justify-content-center text-warning mb-0">
