Adjust design changes for both mobile and web view

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,4 +1,4 @@
-<section class="page-section container-padding" id="about">
+<section class="page-section about-container" id="about">
         <div class="row justify-content-center">
             <div class="about-content">
                 <h2 class="text-blue mt-0 fw-600">About me...! It's Interesting to say</h2>
