--- a/src/app/components/contact-us/contact-us.component.scss
+++ b/src/app/components/contact-us/contact-us.component.scss
@@ -13,7 +13,7 @@ a{
 }
 #contact{
     background: #0b4569!important;
-    padding: 20px 50px;
+    padding: 90px;
    h2,p{
     color: white !important;
    }
