--- a/src/app/components/timeline/timeline.component.scss
+++ b/src/app/components/timeline/timeline.component.scss
@@ -201,7 +201,7 @@ hr.divider {
 }
 .timline-data-mobile{
     @media (max-width:992px){
-        padding: 30px !important;
+        padding: 0px 18px !important;
     }
 }
    
