--- a/src/app/components/timeline/timeline.component.html
+++ b/src/app/components/timeline/timeline.component.html
@@ -1,5 +1,5 @@
 <div class="container-timeline container-padding" id="experience">
-    <div class="col-md-12 mb-5">
+    <div class="col-md-12">
         <div class="section-heading text-center">
             <h2 class="text-center mt-0 text-blue fw-600">My Resume</h2>
             <hr class="divider dark my-4" />
