--- a/src/app/components/head-bar/head-bar.component.scss
+++ b/src/app/components/head-bar/head-bar.component.scss
@@ -141,3 +141,10 @@
   .nav-link{
     color: #fff !important;
   }
+  .navbar-toggler{
+    width: 56px;
+    height: 46px;
+  }
+  i{
+    font-size: 25px;
+  }
