--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,9 @@
         <!-- Portfolio-->
         <!-- <app-experience></app-experience> -->
         <!-- <portfilio></portfilio> -->
+        
         <app-timeline></app-timeline>
+        <app-my-work></app-my-work>
         <!-- Call to action-->
         <contact-us></contact-us>
         <!-- Contact-->
