--- a/src/app/components/head-bar/head-bar.component.scss
+++ b/src/app/components/head-bar/head-bar.component.scss
@@ -24,7 +24,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    min-height: 90px;
+    min-height: 75px;
     @media (min-width:1023px){
         padding:0 20px;
     }
@@ -117,17 +117,17 @@
       .menu-list{
         display: flex;
         justify-content: center;
-        ul li{
-          display: inline-block;
-          margin: 10px;
-          background: #6cb1e9;
-          width: 135px;
-          border-radius: 12px;
-        }
+        // ul li{
+        //   display: inline-block;
+        //   margin: 10px;
+        //   background: #6cb1e9;
+        //   width: 135px;
+        //   border-radius: 12px;
+        // }
       }
    
       nav{
-        padding: 20px 0px;
+        padding: 8px 0px;
         .container-fluid{
           padding-top: 10px;
         }
