--- a/src/app/components/services/services.component.scss
+++ b/src/app/components/services/services.component.scss
@@ -55,6 +55,10 @@
         margin-bottom: 1px !IMPORTANT;
         padding: 11px;
     }
+    &:hover{
+        transform: scale(1.2);
+        box-shadow: 1px 1px 5px 2px #beabab;
+    }
 }
 hr.divider{
     border-color: #7cceed ;
