CHanges for about page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,9 @@
         <!-- <portfilio></portfilio> -->
         
         <app-timeline></app-timeline>
-        <app-my-work></app-my-work>
+        
+        <app-my-blog></app-my-blog>
+        <!-- <app-my-work></app-my-work> -->
         <!-- Call to action-->
         <contact-us></contact-us>
         <!-- Contact-->
