--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -4,7 +4,7 @@
                 <h2 class="text-blue mt-0 fw-600">About me...! It's Interesting to say</h2>
                 <hr class="divider dark my-4" />
                 <p class=" mb-4 headline text-blue">
-                    Senior Front End/UI-Angular 2+ Developer with 5 years of hands-on experience efficiently coding websites and applications using modern HTML, CSS, and JavaScript, AngularX Translate designs to front-end code, estimate time and determine developer requirements and specifications. Collaborate with creative and development teams on the execution of ideas and projects
+                    Experienced <strong>Senior Front End/UI Developer</strong> proficient in crafting websites and applications using contemporary <strong>HTML, CSS, and JavaScript</strong> frameworks such as <strong>Angular</strong> and <strong>React</strong>. Proficient in translating design concepts into functional front-end code, adept at estimating project timelines, and defining detailed developer specifications. Skilled in fostering collaboration between creative and development teams to execute projects seamlessly and bring innovative ideas to life.
                 </p>
                 <a class="btn btn-light btn-lg  btn-one" href="#skills">Find My Skills</a>
             </div>
