--- a/src/app/components/head-bar/head-bar.component.html
+++ b/src/app/components/head-bar/head-bar.component.html
@@ -17,6 +17,7 @@
           <li class="nav-item" (click)="showMobileMenu()"><a class="nav-link" href="#skills">skills</a></li>
           <li class="nav-item" (click)="showMobileMenu()"><a class="nav-link" href="#experience">experience</a></li>
           <li class="nav-item" (click)="showMobileMenu()"><a class="nav-link" href="#contact">contact</a></li>  
+          <li class="nav-item" (click)="showMobileMenu()"><a class="nav-link" href="#blog-posts">Blog</a></li>  
         </ul>
        </div>
       </div>
