--- a/src/app/components/my-work/my-work.component.scss
+++ b/src/app/components/my-work/my-work.component.scss
@@ -1,32 +1,39 @@
-section{
-    background: #fff !important;
-    text-align: center;
+#portfolio-flters li {
+    display: inline-block;
+    font-weight: 500;
+    color: var(--dark);
+    cursor: pointer;
+    transition: .5s;
+    border-bottom: 2px solid transparent;
 }
-.cards{
+
+#portfolio-flters li:hover,
+#portfolio-flters li.active {
+    color: var(--primary);
+    border-color: var(--primary);
+}
+
+.portfolio-img {
+    position: relative;
+}
+
+.portfolio-btn {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: rgba(98, 68, 197, .9);
     display: flex;
-    overflow: hidden;
-    flex-wrap: wrap;
-    gap: 50px;
-    justify-content: center;
-    position: relative;
+    align-items: flex-end;
+    justify-content: flex-start;
+    padding: 30px;
+    padding-bottom: 100px !important;
+    opacity: 0;
+    transition: .5s;
 }
-.items{
-    // width: 300px;
-    position: relative;
-    img{
-        width: 400px;
-        height: 200px;
-    }
-    img:hover{
-        filter: brightness(0.3);
-    }
-    p{
-        font-size: 25px;
-        position: absolute;
-        width: 100%;
-        text-align: center;
-        bottom: 0;
-        display: none;
-    }
-    
+
+.portfolio-item:hover .portfolio-btn {
+    opacity: 1;
+    padding-bottom: 30px !important;
 }
