--- a/src/app/components/services/services.component.html
+++ b/src/app/components/services/services.component.html
@@ -2,11 +2,12 @@
   <div class="">
     <h2 class="text-center mt-0 text-blue fw-600">My Stack</h2>
     <hr class="divider dark my-4" />
-    <div class="row justify-align">
+    <div class="row">
       <ng-container  *ngFor="let lang of data">
-        <div class="col-md-1 col-4 text-center stack-box">
-          <img class="rounded-circle shadow-1-strong mb-4"
+        <div class="stack-box">
+          <img class=""
           src={{lang.image}} alt={{lang.name}}/>
+          <p>{{lang.name}}</p>
           <ul class="list-unstyled d-flex justify-content-center text-warning mb-0">
             <ng-container *ngFor="let item of [].constructor(lang.rating); let i = index">
               <i class="fa fa-star" aria-hidden="true"></i>
