--- a/src/app/components/services/services.component.scss
+++ b/src/app/components/services/services.component.scss
@@ -47,17 +47,28 @@
 }
 
 .stack-box {
-   padding: 10px;
     img{
-        width: 65px;
-        height: 65px;
+        width: 80px;
+        height: 80px;
         object-fit: contain;
-        margin-bottom: 1px !IMPORTANT;
+        margin-bottom: 1px !important;
         padding: 11px;
+        border-radius: 50%;
     }
     &:hover{
         transform: scale(1.2);
-        box-shadow: 1px 1px 5px 2px #beabab;
+        z-index: 9;
+
+    }
+  
+    padding: 0px 0px 15px;
+    box-shadow: 0px 4px 12px 4px gray;
+    border-radius: 10px;
+    width: 250px;
+    text-align: center;
+    p{
+        margin: 0px;
+        padding: 0 0 5px 0;
     }
 }
 hr.divider{
@@ -68,5 +79,9 @@ justify-content: center;
 }
 .container-padding{
     background-color: #fff !important;
+}
+.row{
+    justify-content: center;
+    gap: 50px;
 }
 
