--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -1,8 +1,6 @@
-<header class="masthead" id="page-top">
+<header id="page-top" class="masthead">
   <div class="container h-100">
-    <div
-      class="row h-100 align-items-center justify-content-center text-center"
-    >
+    <div class="row h-100 align-items-center justify-content-center text-center">
       <div class="col-lg-10 align-self-end">
         <h1 class="text-uppercase text-white font-weight-bold">
           “Great things never come from comfort zones.”
@@ -11,22 +9,13 @@
       </div>
       <div class="col-lg-8 align-self-baseline">
         <h3 class="text-uppercase text-white font-weight-bold">DsK</h3>
-        <!-- <a href="#about"
-          ><button class="pushable">
-            <span class="front">
-              Find Out More
-            </span>
-          </button></a
-        > -->
-        <a href="#about">
-        <div class="container">
-         
-          <div class="chevron"></div>
-          <div class="chevron"></div>
-          <div class="chevron"></div>
-          
-        </div>
-      </a>
+        <a href="#about" class="scroll-link">
+          <div class="container chevrons-container">
+            <div class="chevron"></div>
+            <div class="chevron"></div>
+            <div class="chevron"></div>
+          </div>
+        </a>
       </div>
     </div>
   </div>
