--- a/src/app/components/services/services.component.html
+++ b/src/app/components/services/services.component.html
@@ -1,5 +1,5 @@
 <section class="page-section container-padding" id="skills" *ngIf="data">
-  <div class="">
+  <div class="lang-container">
     <h2 class="text-center mt-0 text-blue fw-600">My Stack</h2>
     <hr class="divider dark my-4" />
     <div class="row">
