--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,12 +1,12 @@
-<section class="page-section about-container" id="about">
-        <div class="row justify-content-center">
-            <div class="about-content">
-                <h2 class="text-blue mt-0 fw-600">About me...! It's Interesting to say</h2>
-                <hr class="divider dark my-4" />
-                <p class=" mb-4 headline text-blue">
-                    Experienced <strong>Senior Front End/UI Developer</strong> proficient in crafting websites and applications using contemporary <strong>HTML, CSS, and JavaScript</strong> frameworks such as <strong>Angular</strong> and <strong>React</strong>. Proficient in translating design concepts into functional front-end code, adept at estimating project timelines, and defining detailed developer specifications. Skilled in fostering collaboration between creative and development teams to execute projects seamlessly and bring innovative ideas to life.
-                </p>
-                <a class="btn btn-light btn-lg  btn-one" href="#skills">Find My Skills</a>
-            </div>
+<section id="about" class="page-section about-container">
+    <div class="row justify-content-center">
+        <div class="about-content">
+            <h2 class="text-blue mt-0 fw-600">About me...! It's Interesting to say</h2>
+            <hr class="divider dark my-4" />
+            <p class="mb-4 headline text-blue">
+                Experienced <strong>Senior Front End/UI Developer</strong> proficient in crafting websites and applications using contemporary <strong>HTML, CSS, and JavaScript</strong> frameworks such as <strong>Angular</strong> and <strong>React</strong>. Proficient in translating design concepts into functional front-end code, adept at estimating project timelines, and defining detailed developer specifications. Skilled in fostering collaboration between creative and development teams to execute projects seamlessly and bring innovative ideas to life.
+            </p>
+            <a class="btn btn-light btn-lg btn-one" href="#skills">Find My Skills</a>
+        </div>
     </div>
 </section>
