--- a/src/app/components/about/about.component.scss
+++ b/src/app/components/about/about.component.scss
@@ -11,7 +11,9 @@ a{
 }
 .about-content{
     text-align: -webkit-center;
+    position: relative;
     width: 80%;
+   
 }
 .about-container{
     padding: 40px 8px;
@@ -21,4 +23,10 @@ a{
         padding: 90px;
         background: var(--background-color) !important;
     }
+    
 }
+
+
+
+
+
