--- a/src/app/components/contact-us/contact-us.component.html
+++ b/src/app/components/contact-us/contact-us.component.html
@@ -1,4 +1,3 @@
-
 <section class="page-section container-padding" id="contact">
   <div class="container">
     <div class="row justify-content-center">
@@ -10,7 +9,7 @@
 
     <div class="row footer-social">
       <div class="col-xs-12 col-lg-3 ml-auto text-center mb-0 mb-lg-0 footer-social-links">
-        <a href={{data.link}} download={{data.emailName}}>
+        <a href="{{data.link}}" download="{{data.emailName}}">
           <i class="fa fa-cloud-download fa-2x mb-2 text-white ball"></i>
           <div class="d-block clrPhone">My Resume</div>
         </a>
@@ -21,15 +20,11 @@
       </div>
       <div class="col-xs-12 col-lg-3 mr-auto text-center mb-0 footer-social-links">
         <i class="fa fa-linkedin-square fa-2x mb-2 text-white"></i>
-        <a class="d-block " target="_blank" href="https://www.linkedin.com/in/saikiran-duddukuri-a68bb8282/"
-          >Connect me </a
-        >
+        <a class="d-block" target="_blank" href="https://www.linkedin.com/in/saikiran-duddukuri-a68bb8282/">Connect with me</a>
       </div>
       <div class="col-xs-12 col-lg-3 mr-auto text-center mb-0 footer-social-links">
         <i class="fa fa-envelope fa-2x mb-2 text-white"></i>
-        <a class="d-block" href="mailto:saikiranduddukuri03@gmail.com"
-          >{{data.email}}</a
-        >
+        <a class="d-block" href="mailto:saikiranduddukuri03@gmail.com">{{data.email}}</a>
       </div>
     </div>
   </div>
