--- a/src/app/components/services/services.component.scss
+++ b/src/app/components/services/services.component.scss
@@ -56,6 +56,7 @@
         border-radius: 50%;
     }
     &:hover{
+        transition: all 0.8s;
         transform: scale(1.2);
         z-index: 9;
 
